# bh-api/src/models/seasonModel.js
@@ -3,6 +3,7 @@ import mongoose from 'mongoose';
 const seasonSchema = new mongoose.Schema({
     year: { type: String, required: true },
     team: { type: String, enum: ['A', 'B', 'C'], required: true },
+    matchLength: { type: Number, required: true, default: 36 },
     leagueLevel: { type: Number, required: true, default: 0 },
     leagueName: { type: String },
     position: { type: Number },
